syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService{
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest{
	string productName = 1;
}

message CouponModel{
	int32 id = 1;
	string productName = 2;
	string productId = 3;
	string headline = 4;
	string description = 5;
	string couponCode  = 6;
	int32 amount = 7;
}

message CreateDiscountRequest {
  CouponModel coupon = 1;
}

message UpdateDiscountRequest {
  CouponModel coupon = 1;
}

message DeleteDiscountRequest {
  string productName = 1;
}

message DeleteDiscountResponse {
  bool success = 1;
}